# Text-Classification-component

./: .gitignore  .lightningignore  README.md  app.py  download.py  foo.py  setup.cfg
.github/workflows/: ci.yml
lai_textclf/: __init__.py  callbacks.py  clf.py  data.py  lightning_module.py  main.py  metrics.py  multinodelightningtrainerwithtensorboard.py  tensorboard.py  utilities.py
tests/: requirements.txt  test_clf.py  test_data.py
utilities/: __init__.py  data.py  lightning_module.py
